# rl-stats-to-cloud

./: .gitignore  AGENTS.md  README.md  deny.toml  future.md  index.html  package.json  skills-lock.json  tree-short.output  tree.output  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yaml  release.yaml  security.yaml
.opencode/: opencode.json
.opencode/plugins/: opencode-warp.js
core/: Cargo.toml
core/src/: config.rs  connector.rs  daemon.rs  firebase.rs  firebase_auth.rs  lib.rs  main.rs  models.rs  worker.rs
core/src/daemon/: client.rs  control.rs  mod.rs  protocol.rs  ui_server.rs
core/src/worker/: actors.rs  aggregation.rs  context.rs  events.rs  mod.rs  transformer.rs
docs/: architecture.md  config.example.json  development.md  firebase-base-schema.json  firebase-base-schema_v2.json  future  future2  operations.md  pipeline.md
docs/api-spec/: 00-overview.md  event-BallHit.md  event-ClockUpdatedSeconds.md  event-CountdownBegin.md  event-CrossbarHit.md  event-GoalReplayEnd.md  event-GoalReplayStart.md  event-GoalReplayWillEnd.md  event-GoalScored.md  event-MatchCreated.md  event-MatchDestroyed.md  event-MatchEnded.md  event-MatchInitialized.md  event-MatchPaused.md  event-MatchUnpaused.md  event-PodiumStart.md  event-ReplayCreated.md  event-RoundStarted.md  event-StatfeedEvent.md  tick-UpdateState.md
docs/decisions/: 0001-three-lane-pipeline.md  0002-out-of-process-telemetry-isolation.md  0003-firebase-rtdb-over-firestore.md  0004-tauri-over-electron.md  0005-loopback-tcp-ipc-control-plane.md  0006-bounded-queues-and-explicit-backpressure.md  0007-semantic-channel-primitive-selection.md  0008-full-jitter-exponential-backoff.md  0009-lock-discipline-across-await.md  0010-at-least-once-historical-delivery.md  0011-schema-normalization-at-ingress-boundary.md  0012-fail-soft-ingestion.md  0013-deterministic-fallback-identification.md  0014-headless-first-runtime-design.md  0015-ui-as-observer-not-authority.md  0016-frameworkless-vanilla-typescript-frontend.md  0017-configuration-as-runtime-state.md  0018-ephemeral-credentials-and-standby-mode.md  0019-lifecycle-triggered-database-compaction.md  0020-strict-cross-lane-synchronization-barriers.md  0021-edge-data-aggregation-for-nosql-read-optimization.md  0022-majority-rule-roster-resolution.md  0023-denormalized-team-stats-in-matches-index.md
scripts/: check-no-sync-socket-async.sh
src/: api.ts  constants.ts  fixe1.md  fixe2.md  fixe3.md  main.js  main.ts  main.ts.backup  schemas.ts  state.ts  styles.css  ui.ts
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  connector.rs  firebase.rs  lib.rs  main.rs  worker.rs
src-tauri/src/bridge/: lifecycle.rs  mod.rs  transport.rs
src-tauri/src/commands/: mod.rs
