[package]
name = "rl_stats_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio-util = "0.7"
async-trait = "0.1"
interprocess = "2"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
panic = "deny"
