[package]
name = "rl-stats-to-cloud"
version = "0.1.0"
description = "A Tauri application that collects Rocket League stats and sends them to the cloud."
authors = ["KingSaul22"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rl_stats_to_cloud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio-util = "0.7"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
# This covers -D clippy::all, pedantic, and nursery
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 } # Keep as warn to avoid experimental noise
# NASA Specifics
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
panic = "deny"